[gd_scene load_steps=9 format=3 uid="uid://s0tsdods7k8r"]

[ext_resource type="Script" uid="uid://d22p2hrwfk61h" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://byyxjpkgbecw2" path="res://main_interface_ui.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="2_lquwl"]
[ext_resource type="Script" uid="uid://bfexqup2rhlxp" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.gd" id="4_7mycd"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_lquwl"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_0xm2m"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_h2yge"]
sky_material = SubResource("ProceduralSkyMaterial_0xm2m")

[sub_resource type="Environment" id="Environment_1bvp3"]
background_mode = 2
sky = SubResource("Sky_h2yge")
tonemap_mode = 2

[node name="Main" type="Node3D" node_paths=PackedStringArray("xr_origin")]
script = ExtResource("1_h2yge")
xr_origin = NodePath("XROrigin3D")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1bvp3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25000003, 0.4872028, -0.6184051, 0.6166106, -0.11239898, 0.6558011, 0.7465195, 0, 1.7532778, 0)

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="LeftHand" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/left"
show_when_tracked = true

[node name="OpenXRFbHandTrackingMesh" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/LeftHand"]

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/LeftHand/OpenXRFbHandTrackingMesh"]

[node name="RightHand" type="XRNode3D" parent="XROrigin3D"]
tracker = &"/user/hand_tracker/right"

[node name="OpenXRFbHandTrackingMesh" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/RightHand"]
hand = 1
bones/0/name = "RightPalm"
bones/1/name = "RightHand"
bones/2/name = "RightThumbMetacarpal"
bones/3/name = "RightThumbProximal"
bones/4/name = "RightThumbDistal"
bones/5/name = "RightThumbTip"
bones/6/name = "RightIndexMetacarpal"
bones/7/name = "RightIndexProximal"
bones/8/name = "RightIndexIntermediate"
bones/9/name = "RightIndexDistal"
bones/10/name = "RightIndexTip"
bones/11/name = "RightMiddleMetacarpal"
bones/12/name = "RightMiddleProximal"
bones/13/name = "RightMiddleIntermediate"
bones/14/name = "RightMiddleDistal"
bones/15/name = "RightMiddleTip"
bones/16/name = "RightRingMetacarpal"
bones/17/name = "RightRingProximal"
bones/18/name = "RightRingIntermediate"
bones/19/name = "RightRingDistal"
bones/20/name = "RightRingTip"
bones/21/name = "RightLittleMetacarpal"
bones/22/name = "RightLittleProximal"
bones/23/name = "RightLittleIntermediate"
bones/24/name = "RightLittleDistal"
bones/25/name = "RightLittleTip"

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/RightHand/OpenXRFbHandTrackingMesh"]
hand_tracker = &"/user/hand_tracker/right"

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"/user/fbhandaim/left"

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"/user/fbhandaim/right"

[node name="FunctionPointer" parent="XROrigin3D/RightController" instance=ExtResource("2_lquwl")]
active_button_action = "\"index_pinch\""
laser_length = 1
collide_with_areas = true

[node name="FunctionPickup" parent="XROrigin3D/RightController" instance=ExtResource("4_lquwl")]

[node name="MainInterface" type="Node3D" parent="."]
script = ExtResource("4_7mycd")
screen_size = Vector2(0.6, 0.4)
scene = ExtResource("2_0xm2m")
viewport_size = Vector2(1024, 768)
alpha_scissor_threshold = 0.25
unshaded = true
filter = true
scene_properties_keys = PackedStringArray()
metadata/_custom_type_script = "uid://bfexqup2rhlxp"

[node name="SubViewport" type="SubViewport" parent="MainInterface"]
transparent_bg = true
render_target_update_mode = 4

[node name="MainInterface_UI" parent="MainInterface/SubViewport" instance=ExtResource("2_0xm2m")]

[node name="NotesContainer" type="Node3D" parent="."]

[connection signal="button_pressed" from="XROrigin3D/LeftController" to="." method="_on_left_controller_button_pressed"]
[connection signal="button_released" from="XROrigin3D/LeftController" to="." method="_on_left_controller_button_released"]
[connection signal="input_float_changed" from="XROrigin3D/LeftController" to="." method="_on_left_controller_input_float_changed"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="." method="_on_right_controller_button_pressed"]
[connection signal="button_released" from="XROrigin3D/RightController" to="." method="_on_right_controller_button_released"]
[connection signal="input_float_changed" from="XROrigin3D/RightController" to="." method="_on_right_controller_input_float_changed"]
